dynamix/force-app/main/default/objects/Tower__c/fields/Builder_Organisation__c.field-meta.xml
<CustomField>
    <fullName>Builder_Organisation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Builder Organisation</label>
    <referenceTo>Builder_Organisation__c</referenceTo>
    <relationshipLabel>Towers</relationshipLabel>
    <relationshipName>Towers</relationshipName>
    <type>Lookup</type>
</CustomField>