dynamix/force-app/main/default/objects/Tower__c/fields/Car_Parking__c.field-meta.xml
<CustomField>
    <fullName>Car_Parking__c</fullName>
    <label>Car Parking</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Small</fullName>
            </value>
            <value>
                <fullName>Large</fullName>
            </value>
            <value>
                <fullName>Two Wheeler</fullName>
            </value>
            <value>
                <fullName>Small Mechanical</fullName>
            </value>
            <value>
                <fullName>Large Mechanical</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>