dynamix/force-app/main/default/objects/Tower__c/fields/Early_Completion_Date__c.field-meta.xml
<CustomField>
    <fullName>Early_Completion_Date__c</fullName>
    <label>Early Completion Date</label>
    <type>Date</type>
</CustomField>