dynamix/force-app/main/default/objects/Tower__c/fields/Possession_Status__c.field-meta.xml
<CustomField>
    <fullName>Possession_Status__c</fullName>
    <label>Possession Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Immediate</fullName>
            </value>
            <value>
                <fullName>Custom</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>