dynamix/force-app/main/default/objects/Tower__c/fields/Post_Sales_Executive__c.field-meta.xml
<CustomField>
    <fullName>Post_Sales_Executive__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Post Sales Executive</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Towers</relationshipName>
    <type>Lookup</type>
</CustomField>