dynamix/force-app/main/default/objects/Tower__c/fields/Tower_Area__c.field-meta.xml
<CustomField>
    <fullName>Tower_Area__c</fullName>
    <label>Tower Area</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>