dynamix/force-app/main/default/objects/Tower__c/fields/Tower_Area_in_bigha__c.field-meta.xml
<CustomField>
    <fullName>Tower_Area_in_bigha__c</fullName>
    <formula>Tower_Area_in_sqft__c / 17452.0069808</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tower Area (in bigha.)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>