dynamix/force-app/main/default/objects/Tower__c/fields/Tower_Area_in_guntha__c.field-meta.xml
<CustomField>
    <fullName>Tower_Area_in_guntha__c</fullName>
    <formula>Tower_Area_in_sqft__c / 1088.9848169</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tower Area (in guntha.)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>