dynamix/force-app/main/default/objects/Tower__c/fields/Tower_Area_in_sqft__c.field-meta.xml
<CustomField>
    <fullName>Tower_Area_in_sqft__c</fullName>
    <formula>Tower_Area__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tower Area (in sqft.)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>