dynamix/force-app/main/default/objects/Tower__c/fields/Tower_Initials__c.field-meta.xml
<CustomField>
    <fullName>Tower_Initials__c</fullName>
    <label>Tower Initials</label>
    <length>255</length>
    <type>Text</type>
</CustomField>