dynamix/force-app/main/default/objects/Tower__c/fields/Tower_Number__c.field-meta.xml
<CustomField>
    <fullName>Tower_Number__c</fullName>
    <label>Tower Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>