dynamix/force-app/main/default/objects/Tower__c/fields/Tower_SAP_Code__c.field-meta.xml
<CustomField>
    <fullName>Tower_SAP_Code__c</fullName>
    <label>Tower SAP Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>