dynamix/force-app/main/default/objects/Tower__c/fields/Tower_Status__c.field-meta.xml
<CustomField>
    <fullName>Tower_Status__c</fullName>
    <label>Tower Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sustenance</fullName>
            </value>
            <value>
                <fullName>Launch</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>