dynamix/force-app/main/default/objects/Tower__c/fields/Unit_Names__c.field-meta.xml
<CustomField>
    <fullName>Unit_Names__c</fullName>
    <label>Unit Names</label>
    <length>255</length>
    <type>Text</type>
</CustomField>